--- a/styles/services.css
+++ b/styles/services.css
@@ -26,9 +26,10 @@ h3 {
   line-height: 2;
   font-size: 20px;
   text-align: center;
-  max-width: 100px;
 }
-
+h4 {
+  text-align: center;
+}
 .fas {
   color: rgb(245, 92, 118);
 }
